# agentic-memory

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  LICENSE  Makefile  README.md
.github/: FUNDING.yml
agent/: README.md  config.example.yaml  pyproject.toml  validation_7b_report.md
agent/amem_agent/: __init__.py  __main__.py  brain.py  config.py
agent/amem_agent/agent/: __init__.py  loop.py  prompts.py  session.py
agent/amem_agent/llm/: __init__.py  anthropic_backend.py  base.py  ollama_backend.py  openai_backend.py
agent/amem_agent/memory/: __init__.py  context.py  embeddings.py  extractor.py
agent/amem_agent/utils/: display.py  logger.py
agent/tests/: conftest.py  test_brain.py  test_config.py  test_context.py  test_embeddings.py  test_extractor.py  test_integration.py  test_session.py
agent/validation/: __init__.py  helpers.py  protocol_1_basic_recall.py  protocol_2_decision_recall.py  protocol_3_correction_persistence.py  run_all.py
agent/validation_7b/: __init__.py  __main__.py  backend_detector.py  helpers.py  run_all.py
benches/: benchmarks.rs
crates/agentic-memory/: Cargo.toml  README.md
crates/agentic-memory-cli/: Cargo.toml  README.md
crates/agentic-memory-cli/src/: main.rs
crates/agentic-memory-ffi/: Cargo.toml  README.md
crates/agentic-memory-ffi/src/: lib.rs
crates/agentic-memory-mcp/: Cargo.toml  README.md
crates/agentic-memory-mcp/config/: default.toml  schema.json
crates/agentic-memory-mcp/examples/: claude_desktop.json  vscode_settings.json
crates/agentic-memory-mcp/src/: ghost_bridge.rs  lib.rs  main.rs  v3_auto_capture.rs  v3_greeting.rs  v3_resources.rs
crates/agentic-memory-mcp/src/config/: loader.rs
crates/agentic-memory-mcp/src/daemon/: mod.rs
crates/agentic-memory-mcp/src/protocol/: handler.rs  negotiation.rs
crates/agentic-memory-mcp/src/resources/: registry.rs
crates/agentic-memory-mcp/src/session/: autosave.rs  manager.rs  mod.rs  tenant.rs  workspace.rs
crates/agentic-memory-mcp/src/tools/: conversation_log.rs  invention_collective.rs  invention_infinite.rs  invention_metamemory.rs  invention_prophetic.rs  invention_resurrection.rs  invention_transcendent.rs  longevity_tools.rs  memory_correct.rs  memory_evidence.rs  memory_ground.rs  memory_quality.rs  memory_session_resume.rs  memory_suggest.rs  memory_workspace_add.rs  memory_workspace_compare.rs  memory_workspace_create.rs  memory_workspace_list.rs  memory_workspace_query.rs  memory_workspace_xref.rs  mod.rs  registry.rs  v3_tools.rs
crates/agentic-memory-mcp/src/transport/: capture.rs  sse.rs  stdio.rs
crates/agentic-memory-mcp/src/types/: capabilities.rs  error.rs
crates/agentic-memory-mcp/tests/: edge_cases.rs  edge_cases_inventions.rs  phase10_transport_extraction.rs  phase11_daemon_cli.rs  phase2_protocol.rs  phase5_integration.rs  phase7_v2_stress.rs  phase9_edge_stress.rs
crates/agentic-memory-mcp/tests/common/: mock_client.rs
crates/agentic-memory/benches/: benchmarks.rs  mcp_bench.rs
crates/agentic-memory/examples/: bench_v02_10k.rs  bench_v02_slow.rs
crates/agentic-memory/src/: bridges.rs  contracts.rs  lib.rs
crates/agentic-memory/src/cache/: lru.rs
crates/agentic-memory/src/cli/: commands.rs  mod.rs  repl.rs  repl_commands.rs  repl_complete.rs
crates/agentic-memory/src/engine/: mod.rs  query.rs
crates/agentic-memory/src/query/: intent.rs
crates/agentic-memory/src/types/: header.rs
crates/agentic-memory/src/v3/: block.rs  claude_hooks.rs  compression.rs  config.rs  edge_cases.rs  embeddings.rs  encryption.rs  engine.rs  ghost_writer.rs  immortal_log.rs  migration.rs  mod.rs  recovery.rs  retrieval.rs  tests.rs  tiered.rs
crates/agentic-memory/src/v3/indexes/: causal.rs  entity.rs  mod.rs  procedural.rs  semantic.rs  temporal.rs
crates/agentic-memory/src/v3/longevity/: backup.rs  budget.rs  capture.rs  consolidation.rs  embedding_migration.rs  encryption_rotation.rs  forgetting.rs  hierarchy.rs  integrity.rs  mod.rs  schema.rs  significance.rs  store.rs  sync.rs  tests.rs
crates/agentic-memory/tests/: longevity_integration.rs  longevity_stress.rs  phase1_foundation.rs  phase2_engine.rs  phase3_indexes.rs  phase5_compat.rs  phase5_quality.rs
docs/: api-reference.md  benchmarks.md  command-surface.md  concepts.md  faq.md  file-format.md  integration-guide.md  quickstart.md  runtime-install-sync.md  rust-api.md
examples/: 01_basic_usage.py  02_build_knowledge.py  03_reasoning_chains.py  04_cross_provider.py  05_agent_chat.py  06_one_command_install.sh  README.md  basic_usage.rs  large_graph.rs
installer/: README.md  pyproject.toml
installer/amem_installer/: __init__.py  backup.py  brain_setup.py  cli.py  display.py  platform.py  scanner.py
installer/amem_installer/configurators/: __init__.py  autogen.py  base.py  continue_ext.py  crewai.py  langchain.py  lm_studio.py  mcp.py  ollama.py  openclaw.py
installer/tests/: conftest.py  test_backup.py  test_cli.py  test_configurators.py  test_platform.py  test_scanner.py
npm/wasm/: Cargo.toml
paper/: agenticmemory-paper.tex  references.bib
python/: LICENSE  README.md  pyproject.toml
python/examples/: agent_chat.py  basic_usage.py  build_knowledge.py  cross_provider.py  query_brain.py
python/src/agentic_memory/: __init__.py  agent.py  brain.py  cli_bridge.py  errors.py  models.py
python/src/agentic_memory/integrations/: __init__.py  anthropic.py  base.py  context.py  extractor.py  ollama.py  openai.py
python/tests/: conftest.py  test_agent.py  test_brain.py  test_cli_bridge.py  test_integrations.py  test_models.py  test_package.py
scripts/: check-canonical-sister.sh  check-install-commands.sh  check-runtime-hardening.sh  install.sh  publish.sh  test-primary-problems.sh  test_with_claude.sh
src/: lib.rs
tests/: phase1_foundation.rs  phase2_engine.rs  phase3_indexes.rs  phase4_integration.rs
validation/: brain_integrity.py  cross-provider-report.md  cross_provider_tests.py  harness.py  phase7a_results.md  protocol_4_long_range.py  protocol_5_cross_topic.py  protocol_6_stress.py  provider_switch_tests.py  report.py
(+62 files in other folders)
