[workspace]
resolver = "2"
members = [
    "crates/agentic-memory",
    "crates/agentic-memory-mcp",
    "tests/bridge",
]
exclude = [
    "npm/wasm",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/agentralabs/agentic-memory"
authors = ["Agentra Labs <contact@agentralabs.tech>"]

[workspace.dependencies]
# Shared dependencies - single version across workspace
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tempfile = "3"

# Internal crates
agentic-memory = { path = "crates/agentic-memory" }
agentic-memory-mcp = { path = "crates/agentic-memory-mcp" }
