[project]
name = "amem-agent"
version = "0.1.0"
description = "Terminal AI agent with persistent AgenticMemory"
requires-python = ">=3.10"

dependencies = [
    "anthropic>=0.40.0",       # Claude API client
    "openai>=1.50.0",          # OpenAI API client (also works for Ollama)
    "httpx>=0.27.0",           # HTTP client for Ollama direct calls
    "pyyaml>=6.0",             # Config file parsing
    "rich>=13.0",              # Terminal formatting (colors, panels, markdown)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
include = ["amem_agent*"]

[project.scripts]
amem-agent = "amem_agent.__main__:main"
