[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "agentic-brain"
version = "0.2.0"
description = "Portable binary graph memory for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Omoshola Owolabi" },
]
keywords = ["ai", "agent", "memory", "llm", "graph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# ZERO required dependencies for the core Brain class
# Only stdlib: subprocess, json, pathlib, dataclasses, logging, typing
dependencies = []

[project.optional-dependencies]
# LLM provider integrations
anthropic = ["anthropic>=0.40.0"]
openai = ["openai>=1.50.0"]
ollama = ["httpx>=0.27.0"]

# All LLM integrations
all = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "httpx>=0.27.0",
]

# Development
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/agentralabs/agentic-memory"
Documentation = "https://github.com/agentralabs/agentic-memory/tree/main/docs"
Repository = "https://github.com/agentralabs/agentic-memory"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_memory"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
