[package]
name = "agentic-memory-cli"
version = "0.4.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/agentralabs/agentic-memory"
homepage = "https://agentralabs.tech"
authors = ["Agentra Labs <contact@agentralabs.tech>"]
description = "CLI tool for AgenticMemory"
keywords = ["ai", "agent", "memory", "cli", "graph"]
categories = ["command-line-utilities"]

[[bin]]
name = "amem"
path = "src/main.rs"

[dependencies]
agentic-memory = { path = "../agentic-memory", version = "0.4.0", features = ["cli", "format"] }
agentic-memory-mcp = { path = "../agentic-memory-mcp", version = "0.4.0" }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
rustyline = "14"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
