[package]
name = "agentic-memory-wasm"
version = "0.2.7"
edition = "2021"
description = "WebAssembly bindings for agentic-memory graph-based AI agent memory"
license = "MIT"
repository = "https://github.com/agentralabs/agentic-memory"
homepage = "https://agentralabs.tech"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
agentic-memory = { path = "../../crates/agentic-memory", default-features = false }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = "s"
lto = true
